clang/test/BSC/Negative/Generic/StructAndFunction/call_samename_func/call_same_name_func2.cbs
// RUN: %clang_cc1 -verify %s
void test() { // expected-note{{previous definition is here}}
}
void test<T>() { // expected-error{{conflicting function declarations for 'test'}}
}

int main(){ 
  return 0;
}